crates/pgls_pretty_print/tests/snapshots/single/tests__alter_table_owner_0_60.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/alter_table_owner_0.sql
snapshot_kind: text
---
ALTER TABLE users
  OWNER TO postgres;
