crates/pgls_pretty_print/tests/snapshots/single/tests__alter_table_stmt_1_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/alter_table_stmt_1.sql
---
alter type test_type2
  add attribute c text cascade;
