crates/pgls_pretty_print/tests/snapshots/single/tests__alter_table_stmt_3_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/alter_table_stmt_3.sql
---
alter table itest6
  alter column a
    set generated by default
    set increment by 2
    set start with 100
    restart,
  alter column b restart,
  alter column c restart with 5 set generated always;
