crates/pgls_pretty_print/tests/snapshots/single/tests__alter_tablespace_options_stmt_0_60.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/alter_tablespace_options_stmt_0.sql
snapshot_kind: text
---
ALTER TABLESPACE myspace SET (seq_page_cost = 1.5);
