crates/pgls_pretty_print/tests/snapshots/single/tests__alter_tsconfiguration_stmt_0_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/alter_tsconfiguration_stmt_0.sql
snapshot_kind: text
---
ALTER TEXT SEARCH CONFIGURATION myconfig ADD MAPPING FOR word WITH simple;
